test the 100vh on safari fix

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -9,3 +9,12 @@
     transform: translate(-50%,-50%);
 }
 
+body {
+  height: 100vh;
+}
+
+@supports (-webkit-touch-callout: none) {
+  body {
+    height: -webkit-fill-available;
+  }
+}
